DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4
DPZ Gain: $ 0.71 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP_DB8
DPZ Gain: $ 33.08 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR_DB8
DPZ Gain: $ -3.46 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV_DB8
DPZ Gain: $ 31.52 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL_DB8
DPZ Gain: $ -3.11 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP_DB8
DPZ Gain: $ 28.15 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR_DB8
DPZ Gain: $ -35.76 Win %: 0 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV_DB8
DPZ Gain: $ 2.42 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP_DB8
DPZ Gain: $ 36.27 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL_DB8
DPZ Gain: $ 0.3 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP_DB8
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_IR2
DPZ Gain: $ 14.07 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP
DPZ Gain: $ 6.94 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_IR2
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR
DPZ Gain: $ 21.09 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV
DPZ Gain: $ 57.99 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL
DPZ Gain: $ 0.66 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP
DPZ Gain: $ 39.28 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR
DPZ Gain: $ 4.75 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV
DPZ Gain: $ 6.81 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP
DPZ Gain: $ 37.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL
DPZ Gain: $ -1.72 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO_AC
DPZ Gain: $ -7.32 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_PM
DPZ Gain: $ 61.63 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IR2
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR
DPZ Gain: $ 21.09 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AV
DPZ Gain: $ 59.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AL
DPZ Gain: $ 55.18 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_VI
DPZ Gain: $ 58.21 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_LI
DPZ Gain: $ 6.94 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP
DPZ Gain: $ 44.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM
DPZ Gain: $ 54.27 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_SS
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QL
DPZ Gain: $ 38.12 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_DB8
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AC
DPZ Gain: $ 37.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT
DPZ Gain: $ 10.38 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_PM
DPZ Gain: $ 0.71 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_TR_QP_DB8
DPZ Gain: $ 33.08 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_TR_DB8
DPZ Gain: $ -3.46 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_AV_DB8
DPZ Gain: $ 31.52 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_AL_DB8
DPZ Gain: $ -3.11 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_QP_DB8
DPZ Gain: $ 28.15 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_TR_DB8
DPZ Gain: $ -35.76 Win %: 0 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_AV_DB8
DPZ Gain: $ 2.42 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_QP_DB8
DPZ Gain: $ 36.27 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IT_QL_DB8
DPZ Gain: $ 0.3 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IT_QP_DB8
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_TR_IR2
DPZ Gain: $ 14.07 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_TR_QP
DPZ Gain: $ 6.94 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_QP_IR2
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_TR
DPZ Gain: $ 21.09 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_AV
DPZ Gain: $ 57.99 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_AL
DPZ Gain: $ 0.66 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV_QP
DPZ Gain: $ 39.28 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_TR
DPZ Gain: $ 4.75 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_AV
DPZ Gain: $ 6.81 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM_QP
DPZ Gain: $ 37.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IT_QL
DPZ Gain: $ -1.72 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IT_QP
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_AO_AC
DPZ Gain: $ -7.32 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_QP_PM
DPZ Gain: $ 61.63 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_RV
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IR2
DPZ Gain: $ 58.3 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_TR
DPZ Gain: $ 21.09 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_AV
DPZ Gain: $ 59.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_AL
DPZ Gain: $ 55.18 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_VI
DPZ Gain: $ 58.21 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_LI
DPZ Gain: $ 6.94 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_QP
DPZ Gain: $ 44.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_HM
DPZ Gain: $ 54.27 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_SS
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_QL
DPZ Gain: $ 38.12 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_DB8
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_AO
DPZ Gain: $ 63.36 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_AC
DPZ Gain: $ 37.95 Win %: 100.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_IT
DPZ Gain: $ 10.38 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB1_OS1_CB4_CS4_PM
DPZ Gain: $ -11.69 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
DPZ Gain: $ 8.33 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
DPZ Gain: $ -9.97 Win %: 25.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
DPZ Gain: $ -12.17 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
DPZ Gain: $ -38.48 Win %: 25.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
DPZ Gain: $ 0.18 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
DPZ Gain: $ -15.86 Win %: 25.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
DPZ Gain: $ -20.85 Win %: 25.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
DPZ Gain: $ 9.37 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
DPZ Gain: $ -22.83 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
DPZ Gain: $ 66.3 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
DPZ Gain: $ -10.04 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
DPZ Gain: $ 2.03 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
DPZ Gain: $ 44.56 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
DPZ Gain: $ 33.69 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
DPZ Gain: $ 33.78 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
DPZ Gain: $ -19.28 Win %: 25.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
DPZ Gain: $ 27.88 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
DPZ Gain: $ 33.47 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
DPZ Gain: $ -12 Win %: 0 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
DPZ Gain: $ 59.7 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL
DPZ Gain: $ -3.02 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP
DPZ Gain: $ -34.57 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO_AC
DPZ Gain: $ 0 Win %: 100.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_PM
DPZ Gain: $ 34.56 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
DPZ Gain: $ 59.73 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
DPZ Gain: $ 68.11 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
DPZ Gain: $ 61.96 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
DPZ Gain: $ 61.48 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
DPZ Gain: $ 39.6 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
DPZ Gain: $ 60.11 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
DPZ Gain: $ 0.59 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
DPZ Gain: $ 36.84 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
DPZ Gain: $ 64.47 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
DPZ Gain: $ 61.54 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
DPZ Gain: $ 5.05 Win %: 50.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
DPZ Gain: $ 19.72 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO
DPZ Gain: $ 32.2 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AC
DPZ Gain: $ 59.7 Win %: 75.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT
DPZ Gain: $ 0 Win %: 100.00 in 4 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_PM
DPZ Gain: $ -2.59 Win %: 25.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 37.81 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 19.52 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 9.54 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -39.88 Win %: 0 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 22.52 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 27.52 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB10
DPZ Gain: $ 3.74 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB10
DPZ Gain: $ 22.94 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -4.61 Win %: 25.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 57.51 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_TR_IR3
DPZ Gain: $ 9.75 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP
DPZ Gain: $ 10.77 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_QP_IR3
DPZ Gain: $ 57.51 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR
DPZ Gain: $ 32.53 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV
DPZ Gain: $ 22.55 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL
DPZ Gain: $ -35.92 Win %: 25.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP
DPZ Gain: $ 41.46 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR
DPZ Gain: $ 43.73 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV
DPZ Gain: $ 14.24 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP
DPZ Gain: $ 61.37 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL
DPZ Gain: $ -1.95 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP
DPZ Gain: $ 60.79 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_AO_AC
DPZ Gain: $ -9.64 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_QP_PM
DPZ Gain: $ 25.69 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_RV
DPZ Gain: $ 61.37 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IR3
DPZ Gain: $ 57.51 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_TR
DPZ Gain: $ 55.19 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_AV
DPZ Gain: $ 55.42 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_AL
DPZ Gain: $ 57.82 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_VI
DPZ Gain: $ 58.25 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_LI
DPZ Gain: $ 10.77 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_QP
DPZ Gain: $ 44.27 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_HM
DPZ Gain: $ 59.63 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_SS
DPZ Gain: $ 61.37 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_QL
DPZ Gain: $ 41.67 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_DB10
DPZ Gain: $ 64 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_AO
DPZ Gain: $ 53.74 Win %: 75.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_AC
DPZ Gain: $ 61.37 Win %: 100.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_IT
DPZ Gain: $ -6.78 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_PM
DPZ Gain: $ -6.78 Win %: 50.00 in 4 days with algo TB3_HL_HI_QM_OB2_OS2_CB5_CS5_PM
DPZ Gain: $ 67.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4
DPZ Gain: $ -2.32 Win %: 20.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP_DB8
DPZ Gain: $ 28.45 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR_DB8
DPZ Gain: $ -7.26 Win %: 20.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV_DB8
DPZ Gain: $ 29.88 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL_DB8
DPZ Gain: $ -6.14 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP_DB8
DPZ Gain: $ 26.95 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR_DB8
DPZ Gain: $ -37.01 Win %: 0 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV_DB8
DPZ Gain: $ 2.8 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP_DB8
DPZ Gain: $ 13.12 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL_DB8
DPZ Gain: $ -0.96 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP_DB8
DPZ Gain: $ 55.75 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_IR2
DPZ Gain: $ 11.55 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP
DPZ Gain: $ -0.3 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_IR2
DPZ Gain: $ 56.93 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR
DPZ Gain: $ 26.25 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV
DPZ Gain: $ 63.39 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL
DPZ Gain: $ -1.12 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP
DPZ Gain: $ 41.34 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR
DPZ Gain: $ 3.11 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV
DPZ Gain: $ 40.22 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AL
DPZ Gain: $ 11.41 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP
DPZ Gain: $ 42.15 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL
DPZ Gain: $ -2.34 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP
DPZ Gain: $ 67.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO_AC
DPZ Gain: $ -5.9 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_PM
DPZ Gain: $ 56.89 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV
DPZ Gain: $ 62.59 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IR2
DPZ Gain: $ 60.98 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR
DPZ Gain: $ 19.45 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AV
DPZ Gain: $ 58.55 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AL
DPZ Gain: $ 56.8 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_VI
DPZ Gain: $ 59.49 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_LI
DPZ Gain: $ 5.59 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP
DPZ Gain: $ 48.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM
DPZ Gain: $ 55.87 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_SS
DPZ Gain: $ 67.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QL
DPZ Gain: $ 38.7 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_DB8
DPZ Gain: $ 67.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO
DPZ Gain: $ 61.27 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AC
DPZ Gain: $ 42.15 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT
DPZ Gain: $ 12.64 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_PM
DPZ Gain: $ 23.4 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TS
DPZ Gain: $ -7.75 Win %: 20.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 34.45 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 22.84 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 13.18 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -40.05 Win %: 0 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 27.02 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 20.33 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
DPZ Gain: $ 1 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
DPZ Gain: $ 24.01 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
DPZ Gain: $ 0.6 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 49.77 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_IR3
DPZ Gain: $ 0.21 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ 3.65 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_IR3
DPZ Gain: $ 57.51 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 32.53 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 22.55 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -35.92 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 41.46 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ 43.73 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 44.27 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ 14.24 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 45.07 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -3.03 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 60.79 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -9.64 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 25.69 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 61.37 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IR3
DPZ Gain: $ 57.51 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 58.29 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 55.42 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 57.82 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 58.25 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ 6.94 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 44.27 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 59.63 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 61.37 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 43.04 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_DB10
DPZ Gain: $ 64 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ 53.74 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 45.07 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ -6.78 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 18.72 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ 12.89 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_QP_DB6
DPZ Gain: $ 47.37 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_TR_DB6
DPZ Gain: $ 29.11 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AV_DB6
DPZ Gain: $ 36.05 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AL_DB6
DPZ Gain: $ -29.18 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_QP_DB6
DPZ Gain: $ 48.93 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_TR_DB6
DPZ Gain: $ 38.88 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AV_DB6
DPZ Gain: $ -23.32 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_QP_DB6
DPZ Gain: $ 41.75 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QL_DB6
DPZ Gain: $ -3.26 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QP_DB6
DPZ Gain: $ 57 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_IR1
DPZ Gain: $ 17.52 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_QP
DPZ Gain: $ -2 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP_IR1
DPZ Gain: $ 55.44 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_TR
DPZ Gain: $ 34.86 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AV
DPZ Gain: $ 49.19 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AL
DPZ Gain: $ -21.1 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_QP
DPZ Gain: $ 57 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_TR
DPZ Gain: $ 43.48 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AV
DPZ Gain: $ 52.41 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AL
DPZ Gain: $ -17.2 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_QP
DPZ Gain: $ 38.69 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QL
DPZ Gain: $ -3.1 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QP
DPZ Gain: $ 57.61 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AO_AC
DPZ Gain: $ -14.33 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP_PM
DPZ Gain: $ 52.68 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV
DPZ Gain: $ 57.15 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IR1
DPZ Gain: $ 57 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR
DPZ Gain: $ 43.48 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AV
DPZ Gain: $ 52.41 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AL
DPZ Gain: $ 52.12 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_VI
DPZ Gain: $ 56.27 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_LI
DPZ Gain: $ -17.2 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP
DPZ Gain: $ 57.61 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM
DPZ Gain: $ 45.39 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_SS
DPZ Gain: $ 57.61 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QL
DPZ Gain: $ 47.87 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_DB6
DPZ Gain: $ 54.36 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AO
DPZ Gain: $ 57.61 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AC
DPZ Gain: $ 38.69 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT
DPZ Gain: $ 17.95 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_PM
DPZ Gain: $ 31.08 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TS
DPZ Gain: $ -11.69 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
DPZ Gain: $ 8.33 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
DPZ Gain: $ -9.97 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
DPZ Gain: $ -12.17 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
DPZ Gain: $ -38.48 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
DPZ Gain: $ 0.18 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
DPZ Gain: $ -15.86 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
DPZ Gain: $ -20.85 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
DPZ Gain: $ 9.03 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
DPZ Gain: $ -17.98 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
DPZ Gain: $ 66.3 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
DPZ Gain: $ -10.04 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
DPZ Gain: $ 2.03 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
DPZ Gain: $ 44.56 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
DPZ Gain: $ 33.69 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
DPZ Gain: $ 33.78 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
DPZ Gain: $ -19.55 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
DPZ Gain: $ 27.88 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
DPZ Gain: $ 33.47 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
DPZ Gain: $ 37.52 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AL
DPZ Gain: $ -12 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
DPZ Gain: $ 59.06 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL
DPZ Gain: $ -2.87 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP
DPZ Gain: $ -34.57 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO_AC
DPZ Gain: $ 0 Win %: 100.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_PM
DPZ Gain: $ 34.56 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
DPZ Gain: $ 59.73 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
DPZ Gain: $ 68.11 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
DPZ Gain: $ 61.96 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
DPZ Gain: $ 61.48 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
DPZ Gain: $ 39.6 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
DPZ Gain: $ 60.11 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
DPZ Gain: $ 0.59 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
DPZ Gain: $ 35.8 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
DPZ Gain: $ 64.47 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
DPZ Gain: $ 61.54 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
DPZ Gain: $ 5.05 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
DPZ Gain: $ 19.72 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO
DPZ Gain: $ 32.2 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AC
DPZ Gain: $ 59.06 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT
DPZ Gain: $ 0 Win %: 100.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_PM
DPZ Gain: $ 9.88 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TS
DPZ Gain: $ 9.88 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TS
DPZ Gain: $ 67.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4
DPZ Gain: $ -2.32 Win %: 20.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP_DB8
DPZ Gain: $ 30.1 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR_DB8
DPZ Gain: $ 0.03 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV_DB8
DPZ Gain: $ 27.2 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL_DB8
DPZ Gain: $ -6.14 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP_DB8
DPZ Gain: $ 26.95 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR_DB8
DPZ Gain: $ -40.66 Win %: 0 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV_DB8
DPZ Gain: $ 0.85 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP_DB8
DPZ Gain: $ 15.67 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL_DB8
DPZ Gain: $ -0.96 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP_DB8
DPZ Gain: $ 55.75 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_IR2
DPZ Gain: $ 11.55 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR_QP
DPZ Gain: $ -4.7 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_IR2
DPZ Gain: $ 49.44 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_TR
DPZ Gain: $ 14 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AV
DPZ Gain: $ 63.39 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_AL
DPZ Gain: $ -1.12 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV_QP
DPZ Gain: $ 41.34 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_TR
DPZ Gain: $ 5.94 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AV
DPZ Gain: $ 40.22 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_AL
DPZ Gain: $ 6.04 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM_QP
DPZ Gain: $ 32.63 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QL
DPZ Gain: $ -2.34 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT_QP
DPZ Gain: $ 62.37 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO_AC
DPZ Gain: $ -10.61 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP_PM
DPZ Gain: $ 58.17 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_RV
DPZ Gain: $ 62.59 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IR2
DPZ Gain: $ 56.32 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TR
DPZ Gain: $ 19.45 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AV
DPZ Gain: $ 59.11 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AL
DPZ Gain: $ 56.8 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_VI
DPZ Gain: $ 59.49 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_LI
DPZ Gain: $ 6.17 Win %: 60.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QP
DPZ Gain: $ 48.56 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_HM
DPZ Gain: $ 52.3 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_SS
DPZ Gain: $ 60.36 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_QL
DPZ Gain: $ 38.7 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_DB8
DPZ Gain: $ 54 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AO
DPZ Gain: $ 61.87 Win %: 80.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_AC
DPZ Gain: $ 42.15 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_IT
DPZ Gain: $ 5.24 Win %: 40.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_PM
DPZ Gain: $ 18.14 Win %: 100.00 in 5 days with algo TB4_OC_QM_OB2_OS2_CB4_CS4_TS
DPZ Gain: $ 2.01 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
DPZ Gain: $ 36.82 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
DPZ Gain: $ 13.5 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
DPZ Gain: $ 12.04 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
DPZ Gain: $ -41.4 Win %: 0 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
DPZ Gain: $ 19.16 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
DPZ Gain: $ 23.56 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
DPZ Gain: $ 4.5 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
DPZ Gain: $ 21.88 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
DPZ Gain: $ -2.25 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
DPZ Gain: $ 49.77 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_IR3
DPZ Gain: $ 0.21 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR_QP
DPZ Gain: $ 4.31 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_IR3
DPZ Gain: $ 61.18 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_TR
DPZ Gain: $ 28.87 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AV
DPZ Gain: $ 18.37 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_AL
DPZ Gain: $ -39.04 Win %: 20.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV_QP
DPZ Gain: $ 37.35 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_TR
DPZ Gain: $ 40.07 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AV
DPZ Gain: $ 40.09 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_AL
DPZ Gain: $ -20.25 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM_QP
DPZ Gain: $ 37.12 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QL
DPZ Gain: $ -6.69 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT_QP
DPZ Gain: $ 63.37 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO_AC
DPZ Gain: $ -11.45 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP_PM
DPZ Gain: $ 20.37 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_RV
DPZ Gain: $ 56.05 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IR3
DPZ Gain: $ 57.94 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TR
DPZ Gain: $ 51.53 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AV
DPZ Gain: $ 53.44 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AL
DPZ Gain: $ 56.19 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_VI
DPZ Gain: $ 62.52 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_LI
DPZ Gain: $ 3.65 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QP
DPZ Gain: $ 34.2 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_HM
DPZ Gain: $ 63.58 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_SS
DPZ Gain: $ 56.82 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_QL
DPZ Gain: $ 39.86 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_DB10
DPZ Gain: $ 68.43 Win %: 100.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AO
DPZ Gain: $ 54.45 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_AC
DPZ Gain: $ 40.91 Win %: 60.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_IT
DPZ Gain: $ -13.23 Win %: 40.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_PM
DPZ Gain: $ 13.4 Win %: 80.00 in 5 days with algo TB3_HL_HI_QM_OB1_OS1_CB5_CS5_TS
DPZ Gain: $ 8.16 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_QP_DB6
DPZ Gain: $ 42.56 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_TR_DB6
DPZ Gain: $ 25.78 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AV_DB6
DPZ Gain: $ 33.07 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AL_DB6
DPZ Gain: $ -30.04 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_QP_DB6
DPZ Gain: $ 47.57 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_TR_DB6
DPZ Gain: $ 35.55 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AV_DB6
DPZ Gain: $ -24.46 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_QP_DB6
DPZ Gain: $ 42.45 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QL_DB6
DPZ Gain: $ -1.5 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QP_DB6
DPZ Gain: $ 56.38 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_IR1
DPZ Gain: $ 14.68 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR_QP
DPZ Gain: $ -15.57 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP_IR1
DPZ Gain: $ 59.52 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_TR
DPZ Gain: $ 31.53 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AV
DPZ Gain: $ 46.21 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_AL
DPZ Gain: $ -29.36 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV_QP
DPZ Gain: $ 27.71 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_TR
DPZ Gain: $ 43.76 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AV
DPZ Gain: $ 22.18 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_AL
DPZ Gain: $ -22.36 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM_QP
DPZ Gain: $ 39.39 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QL
DPZ Gain: $ -2.86 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT_QP
DPZ Gain: $ 53.95 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AO_AC
DPZ Gain: $ -14.33 Win %: 40.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP_PM
DPZ Gain: $ 52.38 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_RV
DPZ Gain: $ 53.09 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IR1
DPZ Gain: $ 59.17 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TR
DPZ Gain: $ 39.17 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AV
DPZ Gain: $ 52.57 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AL
DPZ Gain: $ 47.6 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_VI
DPZ Gain: $ 53.25 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_LI
DPZ Gain: $ -13.58 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QP
DPZ Gain: $ 56.9 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_HM
DPZ Gain: $ 41.73 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_SS
DPZ Gain: $ 56.33 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_QL
DPZ Gain: $ 44.21 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_DB6
DPZ Gain: $ 47.82 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AO
DPZ Gain: $ 44.42 Win %: 80.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_AC
DPZ Gain: $ 18.34 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_IT
DPZ Gain: $ 17.5 Win %: 60.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_PM
DPZ Gain: $ 35.44 Win %: 100.00 in 5 days with algo TB5_OC_QM_OB1_OS1_CB4_CS4_TS
DPZ Gain: $ -24.27 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
DPZ Gain: $ -12.16 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
DPZ Gain: $ -10.22 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
DPZ Gain: $ -10.63 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
DPZ Gain: $ -45.21 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
DPZ Gain: $ 0.44 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
DPZ Gain: $ -11.4 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
DPZ Gain: $ -23.79 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
DPZ Gain: $ -1.67 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
DPZ Gain: $ -18.82 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
DPZ Gain: $ 45.71 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_IR5
DPZ Gain: $ -34.63 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR_QP
DPZ Gain: $ -3.81 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_IR5
DPZ Gain: $ 24.21 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_TR
DPZ Gain: $ 32.02 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AV
DPZ Gain: $ 35.16 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_AL
DPZ Gain: $ -16.53 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV_QP
DPZ Gain: $ 22.32 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_TR
DPZ Gain: $ 35.18 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AV
DPZ Gain: $ 41.79 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_AL
DPZ Gain: $ -9.3 Win %: 20.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM_QP
DPZ Gain: $ 60.18 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QL
DPZ Gain: $ -8.03 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT_QP
DPZ Gain: $ -33.55 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO_AC
DPZ Gain: $ 0 Win %: 100.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP_PM
DPZ Gain: $ 38.28 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_RV
DPZ Gain: $ 63.61 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IR5
DPZ Gain: $ 72.06 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TR
DPZ Gain: $ 61.96 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AV
DPZ Gain: $ 24.69 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AL
DPZ Gain: $ 43.22 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_VI
DPZ Gain: $ 63.99 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_LI
DPZ Gain: $ -0.02 Win %: 40.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QP
DPZ Gain: $ 27.84 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_HM
DPZ Gain: $ 53.77 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_SS
DPZ Gain: $ 61.26 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_QL
DPZ Gain: $ 7.73 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_DB30
DPZ Gain: $ 23.5 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AO
DPZ Gain: $ 33 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_AC
DPZ Gain: $ 58.49 Win %: 60.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_IT
DPZ Gain: $ -4.9 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_PM
DPZ Gain: $ 14.27 Win %: 80.00 in 5 days with algo TB1_HL_HS_QM_OB3_OS3_CB4_CS4_TS
